add button for dismissal

--- a/src/components/filter-modal/filter-modal.html
+++ b/src/components/filter-modal/filter-modal.html
@@ -36,4 +36,7 @@
       <ion-checkbox [(ngModel)]="saturday" color="primary" checked="true"></ion-checkbox>
     </ion-item>
   </ion-list>
+  <ion-fab top right>
+    <button (click)="dismiss()" ion-fab mini edge><ion-icon name="close"></ion-icon></button>
+  </ion-fab>
 </ion-content>
