--- a/src/components/filter-modal/filter-modal.html
+++ b/src/components/filter-modal/filter-modal.html
@@ -38,6 +38,8 @@
   </ion-list>
 
   <ion-label>Hours</ion-label>
+  <button id="select-all-button" ion-button (click)="selectHoursAll()" color="secondary" outline>Select All</button>
+  <button id="deselect-all-button" ion-button (click)="deselectHoursAll()" color="secondary" outline>Deselect All</button>
   <ion-list>
     <ion-item *ngFor="let hr of filterTime.hour; let i = index; trackBy: trackByIndex">
       <ion-label>{{i}}</ion-label>
